examples/test/testpolicy14648.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14648
  namespace: namespace475
spec:
  podSelector:
    matchLabels:
      key1: value28
      key3: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value6
          key14: value49
          key33: value46
      podSelector:
        matchLabels:
          key28: value45
          key6: value18
          key39: value0
